2009-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source\win32\GSFileHandle.m:
	* Source\win32\NSMessagePort.m:
	* Source\win32\NSMessagePortNameServer.m:
	* Source\NSConcreteMapTable.m:
	* Source\Additions\GSCompatibility.m:
	* Source\Additions\GSCategories.m:
	* Source\NSData.m:
	Fixes for windows and changes to GC code, plus changes for old
	compilers which don't support anonymous unions, plus improvement
	to error reporting on windows, plus fix to correctly rename
	protected files if possible.

2009-03-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConcretePointerFunctions.h: Minor GC tweaks
	* Source/NSMessagePortNameServer.m: Fix map table declaration
	* Source/NSKeyedUnarchiver.m: ditto
	* Source/NSKeyValueObserving.m: ditto
	* Source/NSObject.m: ditto
	* Source/GNUmakefile: Add NSConcreteMapTable.m
	* Source/NSConcreteMapTable.m: New file for new class
	* Source/NSMapTable.m: Change to be an abstract class
	* Headers/Foundation/NSMapTable.h: Add new MacOS-X 10.5 API
	* Headers/Additions/GNUstepBase/GSIMap.h: Some changes for
	new map table API.

2009-03-12  Bernard Cafferelli <voyageursp@gmail.com>

	* configure.ac: Add --disable-zeroconf option to control whether
	NSNetServices (and a dependency on libdns_sd) is enabled.

2009-03-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepBase/GSIArray.h:
	* Source/NSNotificationCenter.m:
	* Source/NSRunLoop.m:
	* Source/NSZone.m:
	Various small GC bugfixes to get more of testsuite passing.

2009-03-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepBase/GSIArray.h:
	* Headers/Additions/GNUstepBase/GSIMap.h:
	* Headers/Foundation/NSZone.h:
	* Source/Additions/GSInsensitiveDictionary.m:
	* Source/Additions/Unicode.m:
	* Source/GSAttributedString.m:
	* Source/GSCountedSet.m:
	* Source/GSDictionary.m:
	* Source/GSPrivate.h:
	* Source/GSSet.m:
	* Source/NSArchiver.m:
	* Source/NSConnection.m:
	* Source/NSHashTable.m:
	* Source/NSKeyedArchiver.m: